# sticky-sync

./: Cargo.toml  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/plans/: 2025-11-19-config-command-design.md  2025-11-19-stickies-sync-design.md  2025-11-19-stickies-sync-implementation.md  2025-12-01-release-workflows-update.md
src/: config.rs  database.rs  error.rs  filesystem.rs  lib.rs  main.rs  rtf.rs  sync.rs
src/commands/: config.rs  hup.rs  list.rs  mod.rs  new.rs  search.rs  show.rs  sync.rs
src/filesystem/: mod.rs  plist.rs  rtfd.rs
tests/: config_test.rs  database_crud_test.rs  database_test.rs  integration_test.rs  plist_test.rs  rtf_test.rs  rtfd_test.rs  rtfd_write_test.rs  sync_test.rs
