[package]
name = "sticky-situation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sticky"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
plist = "1.6"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
regex = "1.10"
hostname = "0.4"

[dev-dependencies]
tempfile = "3.12"
